[tool.poetry]
name = "theia-app"
version = "0.1.0"
description = "A webapp for learning CV"
authors = ["Ammar Alam"]
license = "Copyright (C) Ammar Alam - All Rights Reserved"
readme = "README.md"
packages = [{include = "theia_app"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
